updated some bill tests, now retrieving and deleting bills requires a query param for bill id, added swagger spec for bill
