# swagger.yaml
@@ -37,6 +37,8 @@ tags:
     description: "Everything you need to handle Bill Man data."
   - name: "Categories"
     description: "Everything you need to retrieve category data."
+  - name: "Bills"
+    description: "Everything you need to retrieve bill data."
 schemes:
   - "https"
 paths:
@@ -957,12 +959,207 @@ paths:
         - "Categories"
         - "Bill Man"
       summary: "Deletes Category data with the id"
-      operationId: "deleteFederalIncomeTax"
+      operationId: "deleteCategory"
       produces:
         - "application/json"
       parameters:
         - in: query
           name: "category"
+          description: "Id of the data to delete"
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: "Successfully deleted data"
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              message:
+                type: string
+        "400":
+          description: "Invalid data supplied"
+          schema:
+            type: object
+            $ref: '#/definitions/BadRequestResponse'
+        "404":
+          description: "Data not found"
+          schema:
+            type: object
+            $ref: '#/definitions/NotFoundResponse'
+  /billMan/bills:
+    get:
+      tags:
+        - "Bills"
+        - "Bill Man"
+      summary: "Finds all Bills accessible to the user"
+      operationId: "findBills"
+      parameters:
+        - in: query
+          type: integer
+          name: "bill"
+          required: false
+          description: "The bill you want to retrieve, not giving a bill id will retrieve all bills"
+      produces:
+        - "application/json"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              message:
+                type: array
+                items:
+                  $ref: "#/definitions/Bill"
+        "404":
+          description: "Unable to retrieve data"
+          schema:
+            type: object
+            $ref: "#/definitions/NotFoundResponse"
+    post:
+      tags:
+        - "Bills"
+        - "Bill Man"
+      summary: "Add new Bill data"
+      operationId: "addBill"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: body
+          name: "body"
+          description: "Bill object that needs to be added"
+          required: true
+          schema:
+            type: object
+            properties:
+              owner:
+                type: object
+                $ref: '#/definitions/User'
+              name:
+                type: string
+              amount:
+                type: string
+              varyingAmount:
+                type: boolean
+              payoffAmount:
+                type: string
+              sharedUsers:
+                type: array
+                items:
+                  type: object
+                  $ref: '#/definitions/User'
+              categories:
+                type: array
+                items:
+                  type: object
+                  $ref: '#/definitions/Category'
+              color:
+                type: object
+                $ref: '#/definitions/Color'
+            required:
+              - name
+              - owner
+              - amount
+              - categories
+              - color
+              - varyingAmount
+      responses:
+        "201":
+          description: "Successfully added Bill data"
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 201
+              message:
+                type: object
+                $ref: '#/definitions/Bill'
+        "409":
+          description: "Data conflicted with something already in the database"
+          schema:
+            $ref: '#/definitions/ConflictResponse'
+    put:
+      tags:
+        - "Bills"
+        - "Bill Man"
+      summary: "Update existing Bill data"
+      operationId: "updateBill"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: body
+          name: "body"
+          description: "Bill data that needs to be updated"
+          required: true
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+              owner:
+                type: object
+                $ref: '#/definitions/User'
+              name:
+                type: string
+              amount:
+                type: string
+              varyingAmount:
+                type: boolean
+              payoffAmount:
+                type: string
+              sharedUsers:
+                type: array
+                items:
+                  type: object
+                  $ref: '#/definitions/User'
+              categories:
+                type: array
+                items:
+                  type: object
+                  $ref: '#/definitions/Category'
+              color:
+                type: object
+                $ref: '#/definitions/Color'
+            required:
+              - id
+      responses:
+        "200":
+          description: "Successfully updated Bill data"
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              message:
+                type: object
+                $ref: '#/definitions/Bill'
+        "404":
+          description: "Medicare data not found"
+          schema:
+            $ref: '#/definitions/NotFoundResponse'
+    delete:
+      tags:
+        - "Bills"
+        - "Bill Man"
+      summary: "Deletes Bill data with the id"
+      operationId: "deleteBill"
+      produces:
+        - "application/json"
+      parameters:
+        - in: query
+          name: "bill"
           description: "Id of the data to delete"
           required: true
           type: integer
